# copilot-proxy

./: .gitignore  Cargo.toml  Cross.toml  PROJECT_PLAN.md  README.md
docs/: requirements-plan.md
src/: auth.rs  cli.rs  config.rs  headers.rs  lib.rs  main.rs  proxy.rs  transform.rs
