[package]
name = "copilot_proxy"
version = "0.1.0"
edition = "2024"

[dependencies]
async-trait = "0.1.89"
axum = { version = "0.8.1", features = ["macros"] }
futures-util = "0.3.31"
http = "1.3.1"
reqwest = { version = "0.12.14", default-features = false, features = ["json", "stream", "rustls-tls"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
serde_yaml = "0.9.34"
thiserror = "2.0.12"
tokio = { version = "1.44.1", features = ["full"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter", "fmt"] }
uuid = { version = "1.16.0", features = ["v4"] }

[dev-dependencies]
tempfile = "3.19.1"
tower = { version = "0.5.2", features = ["util"] }
